fix: modal window overlap leave room button

--- a/client/src/components/GameTableHeader/gameTableHeader.module.css
+++ b/client/src/components/GameTableHeader/gameTableHeader.module.css
@@ -11,6 +11,8 @@
 }
 
 .close-btn{
+    position: relative;
+    z-index: 2;
     cursor: pointer;
 }
 
